# otus_cpp_16

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: realty_data.h
src/: rclss.cpp  rclst.cpp
